# open-claravox-editor

./: .gitignore  CHANGELOG.md  README.md
.github/: FUNDING.yml
.github/workflows/: ubuntu2204.yml
ci/AppDir/share/applications/: claravox-gui.desktop
doc/: undocumented-midi.txt
doc/source/: Links.rst  MIDI.rst  conf.py  index.rst
src/: CMakeLists.txt
src/backend/: BackEnd.cpp  BackEnd.h  Backend.cpp  Backend.h  CHANGELOG.md  CMakeLists.txt  Claravox.cpp  Claravox.h  FilteredPresetListModel.cpp  FilteredPresetListModel.h  GroupListModel.cpp  GroupListModel.h  MIDIMessage.cpp  MIDIMessage.h  MIDIParameter.cpp  MIDIParameter.h  Mod.cpp  Mod.h  ModMatrix.cpp  ModMatrix.h  Parameters.cpp  Parameters.h  Preset.cpp  Preset.h  PresetListModel.cpp  PresetListModel.h  SortFilterPresetListModel.cpp  SortFilterPresetListModel.h  TagListModel.cpp  TagListModel.h  Util.cpp  Util.h  backend.qrc
src/backend/factory-presets/: Afterburn.mpr  AirVox.mpr  Alibi.mpr  Alien Lights.mpr  Ball of Light.mpr  Bellecho.mpr  Bright Shift.mpr  Burning Waves.mpr  COPYRIGHT  Cave Dweller.mpr  Clair de Lune.mpr  Clara 1969.mpr  Classic.mpr  Cloudy Vista.mpr  Deep Dive.mpr  Double Tracker.mpr  Dream Sequence.mpr  Enveloped.mpr  Ghostly.mpr  Glass Resonators.mpr  Grinding Gears.mpr  Growly.mpr  Harmonic Choir.mpr  HollowVox.mpr  Incandescent.mpr  Initial Preset.mpr  Let me sing please.mpr  Loosing Track.mpr  Louis and Bebe.mpr  Low Orbits.mpr  Lucky Human.mpr  ModuTonal.mpr  Morricone Harmon.mpr  Mr Spacely.mpr  Mystery Mile.mpr  Nautical.mpr  Noise Galaxy.mpr  Noise Swash.mpr  Other Roomly.mpr  Overture.mpr  (+21 more)
src/cli/: CMakeLists.txt  main.cpp
src/gui/: CMakeLists.txt  PageEditor.qml  PageEditorContents.qml  PageLibrary.qml  PageSettings.qml  PageSettingsApp.qml  PageSettingsAppMIDI.qml  PageSettingsGlobal.qml  PageSettingsInformation.qml  PageSettingsMIDI.qml  TagEditor.qml  gui.qrc  main.cpp  main.qml  qtquickcontrols2.conf
src/gui/components/: LabeledPane.qml  LabeledSlider.qml  MidiChannel.qml  Osc2FilterEnable.qml  Osc2FilterMode.qml  Oscillator1.qml  Oscillator2.qml  OscillatorMode.qml  Register.qml  RoundPane.qml  ScaleSelector.qml  SectionLabel.qml  TabWordList.qml  TapTimeButton.qml  Util.qml  VertTabBar.qml  Wavetable.qml
src/test/: CMakeLists.txt  tst_presetparser.cpp  tst_presetserialization.cpp
